syntax = "proto3";

package api.auth.v1;

option go_package = "github.com/kart-io/sentinel-x/pkg/api/auth/v1;authv1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service AuthService {
  // Authentication
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (google.protobuf.Empty);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
}

message LoginRequest {
    // @gotags: json:"username" validate:"required"
    string username = 1 [(validate.rules).string = {min_len: 3, max_len: 32}];
    // @gotags: json:"password" validate:"required"
    string password = 2;
}

message LoginResponse {
    string token = 1;
    int64 expire_at = 2;
}

message RegisterRequest {
    // @gotags: json:"username" validate:"required"
    string username = 1 [(validate.rules).string = {min_len: 3, max_len: 32}];
    // @gotags: json:"password" validate:"required"
    string password = 2 [(validate.rules).string = {min_len: 8, max_len: 64}];
    // @gotags: json:"email" validate:"required,email"
    string email = 3 [(validate.rules).string = {email: true}];
    // @gotags: json:"mobile" validate:"required,mobile"
    string mobile = 4 [(validate.rules).string = {pattern: "^$|^1[3-9]\\d{9}$", ignore_empty: true}];
}

message RegisterResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string mobile = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}

message LogoutRequest {
    string token = 1;
}